# nix

./: .CLAUDE.md  .gitignore  .sops.yaml  .sops.yaml.template  .tmux-setup.sh  CLAUDE.md  DEPLOYMENT-CHECKLIST.md  DISABLED_SERVICES.md  PARALLELS-VM-SETUP.md  README.md  SECURITY-IMPLEMENTATION.md  SOPS-SETUP-GUIDE.md  VM-SETUP.md  auto-rebuild.sh  configuration.nix  dwm-config.h  flake.nix  hardware-configuration.nix  home.nix  machines.toml  nvim-lazyvim.nix  nvim-shared.nix  polybar.ini  polybar.nix  pyproject.toml  result  screenshot.nix  security-audit-2026-02-10.md  st.nix  statix.toml  sway-transparency.nix  tmux.conf  unevictable-diagnose.sh  unevictable-drilldown.sh  unevictable-proc-drilldown.sh  x11-dwm.nix
.claude/: settings.local.json
.claude/commands/: explore-frontend.md
.github/workflows/: ci.yml  update-flake-lock.yml
benchmarks/codium-vscode/: README.md  run-benchmarks.py
benchmarks/vm-host-performance/: README.md  run-benchmarks.py
certs/: netskope-root.pem
darwin/: auto-upgrade.nix  caffeinate.nix  certs.nix  default.nix  homebrew.nix  macos-defaults.nix  nix.nix  packages.nix  power.nix  sops.nix  users.nix
darwin/services/: default.nix  local-llm.nix  whisper-server.nix
hardware/hp-laptop/: hardware-configuration.nix
hardware/parallels-vm/: hardware-configuration.nix
hardware/prl-dev-vm/: hardware-configuration.nix
hardware/tala/: hardware-configuration.nix
hardware/vmw-dev-vm/: hardware-configuration.nix
hardware/workstation/: amd-gpu.nix  hardware-configuration.nix
home/: default.nix  fonts.nix
home/cli/: aerospace-window-switcher.nix  aerospace.nix  app-launcher.nix  ast-edit-extension.ts  ast-grep-extension.ts  atuin.nix  btop.nix  carapace.nix  claude.nix  codex.nix  cursor.nix  default.nix  default.nix.backup  fish.nix  (+25 more)
home/cli/pi-rs/: Cargo.toml  NOTICE  default.nix
home/cli/pi-rs/agent-hooks/: claude-rewrite.sh.in  codex-rules.md  cursor-rewrite.sh.in  pi-rewrite-extension.ts
home/cli/pi-rs/crates/pi-ast/: Cargo.toml
home/cli/pi-rs/crates/pi-rs/: Cargo.toml
home/cli/pi-rs/crates/pi-rs/src/: hashline.rs  main.rs  proto.rs
home/cli/pi-rs/crates/pi-rs/src/cmd/: ast.rs  grep.rs  hash.rs  hook.rs  html2md.rs  mod.rs  rewrite.rs  summary.rs
home/cli/pi-rs/crates/pi-rs/src/cmd/filters/: cargo.rs  docker.rs  find.rs  gh.rs  git.rs  json.rs  kubectl.rs  log.rs  ls.rs  mod.rs  npm.rs  pnpm.rs  pytest.rs  read.rs  yarn.rs
home/cli/pi-rs/crates/pi-rs/src/compress/: dedupe.rs  failures.rs  group.rs  mod.rs  progress.rs  tee.rs
home/cli/pi-rs/crates/pi-rs/src/rewrite/: config.rs  mod.rs  rules.rs
keys/: hp-laptop.age.pub  mac-work.age.pub  parallels-vm.age.pub  prl-dev-vm.age.pub
memory/: add-age-host-key.sh  debug-hyprland.sh  hyprland-memory-breakdown.sh  hyprland-memory-monitor.sh  hyprland-memory-tracker.sh  memory-investigator.py  pyproject.toml  run-memory-chart.sh  unevictable-memory-chart.py
memory_investigation_20250902_210506/: analysis_report.txt  unevictable_diagnostic.txt
memory_investigation_20250902_210529/: analysis_report.txt  unevictable_diagnostic.txt
overlays/: import-cargo-lock.nix
reports/: codium-vscode-vm-vs-macos.md  terminal-emulators-prl-dev-vm.md  vm-vs-macos-performance.md
scripts/: README.md  add-age-host-recipient.sh  install-nixos.sh  term-bench.sh  term-scroll-bench.sh  term-startup-bench.sh  watch-rebuild.sh
secrets/: secrets.yaml
st/: config.h
system/: accounts.nix  audio.nix  auto-upgrade.nix  bluetooth.nix  boot.nix  browsers.nix  caddy.nix  chroma.nix  default.nix  desktop.nix  display-manager.nix  env.nix  flake-update.nix  fonts.nix  grafana.nix  greetd.nix  kmscon.nix  lockscreen.nix  loki.nix  matrix-alert.nix  mdns.nix  networking.nix  nix.nix  nvim.nix  packages.nix  printing.nix  security.nix  sops.nix  ssh.nix  users.nix  virtualization.nix
(+226 files in other folders)
